--- a/sass/_components/_navigation.scss
+++ b/sass/_components/_navigation.scss
@@ -16,7 +16,7 @@
         display: flex;
         flex-direction: column;
         position: fixed;
-        padding-top: 120px;
+        padding-top: 100px;
         top: 0;
         right: 0;
         line-height: 3rem;
